crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__invalid_order.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/invalid_order.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..100,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..17,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 0..17,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..17,
                                node_index: NodeIndex(None),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 15..16,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 5..13,
                                        node_index: NodeIndex(None),
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 7..13,
                                                id: Name("kwargs"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 18..30,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 18..30,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 18..22,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 22..30,
                                node_index: NodeIndex(None),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 28..29,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 23..26,
                                        node_index: NodeIndex(None),
                                        arg: Some(
                                            Identifier {
                                                id: Name("x"),
                                                range: 23..24,
                                                node_index: NodeIndex(None),
                                                parameter_node_index: NodeIndex(None),
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 25..26,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 31..53,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 31..53,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 31..35,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 35..53,
                                node_index: NodeIndex(None),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 51..52,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 36..39,
                                        node_index: NodeIndex(None),
                                        arg: Some(
                                            Identifier {
                                                id: Name("x"),
                                                range: 36..37,
                                                node_index: NodeIndex(None),
                                                parameter_node_index: NodeIndex(None),
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 38..39,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                    Keyword {
                                        range: 41..49,
                                        node_index: NodeIndex(None),
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 43..49,
                                                id: Name("kwargs"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 54..75,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 54..75,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 54..58,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 58..75,
                                node_index: NodeIndex(None),
                                args: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 69..74,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 70..74,
                                                    id: Name("args"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 59..67,
                                        node_index: NodeIndex(None),
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 61..67,
                                                id: Name("kwargs"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 76..99,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 76..99,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 76..80,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 80..99,
                                node_index: NodeIndex(None),
                                args: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 92..97,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 93..97,
                                                    id: Name("args"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [
                                    Keyword {
                                        range: 81..89,
                                        node_index: NodeIndex(None),
                                        arg: None,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 83..89,
                                                id: Name("kwargs"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(**kwargs, x)
  |                ^ Syntax Error: Positional argument cannot follow keyword argument unpacking
2 | call(x=1, y)
3 | call(x=1, **kwargs, y)
  |


  |
1 | call(**kwargs, x)
2 | call(x=1, y)
  |           ^ Syntax Error: Positional argument cannot follow keyword argument
3 | call(x=1, **kwargs, y)
4 | call(**kwargs, *args)
  |


  |
1 | call(**kwargs, x)
2 | call(x=1, y)
3 | call(x=1, **kwargs, y)
  |                     ^ Syntax Error: Positional argument cannot follow keyword argument unpacking
4 | call(**kwargs, *args)
5 | call(**kwargs, (*args))
  |


  |
2 | call(x=1, y)
3 | call(x=1, **kwargs, y)
4 | call(**kwargs, *args)
  |                ^^^^^ Syntax Error: Iterable argument unpacking cannot follow keyword argument unpacking
5 | call(**kwargs, (*args))
  |


  |
3 | call(x=1, **kwargs, y)
4 | call(**kwargs, *args)
5 | call(**kwargs, (*args))
  |                 ^^^^^ Syntax Error: Starred expression cannot be used here
  |
