crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__missing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/missing_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..9,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..9,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 0..9,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..9,
                                node_index: NodeIndex(None),
                                args: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 5..6,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 7..8,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(x y)
  |        ^ Syntax Error: Expected `,`, found identifier
